16_subseq/grade.txt
Grading at Sat Aug  1 17:34:25 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:10:7: error: unused variable ‘num’ [-Werror=unused-variable]
   int num = array[0];
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
